<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_create_pad">Create a new list</string>
    <string name="action_delete_pad">Delete this list</string>
    <string name="action_rename_pad">Rename this list</string>
    <string name="action_add_pad_item">Add an item</string>
    <string name="menu">Menu</string>
    <string name="pad_options">Shopping list options</string>
    <string name="create_pad_dialog_title">Create a new list</string>
    <string name="delete_pad_dialog_title">Delete shopping list</string>
    <string name="delete_pad_dialog_body">Delete \"%s\"? This action cannot be undone.</string>
    <string name="rename_pad_dialog_title">Rename shopping list</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_submit_create">Create</string>
    <string name="dialog_submit_delete">Delete</string>
    <string name="dialog_submit_apply">Apply</string>
    <string name="dialog_submit_add">Add</string>
    <string name="pad_name_input_label">Name</string>
    <string name="pad_item_name_input_label">Item</string>
    <string name="pad_item_note_input_label">Note</string>
    <string name="overwrite_pad_item_dialog_title">Existing item</string>
    <string name="overwrite_pad_item_dialog_body">Replace \"%s\"?</string>
    <string name="dialog_submit_replace">Replace</string>
    <string name="empty_pad_placeholder">The list is empty</string>
    <string name="bought_previously_title">Bought previously</string>
    <string name="action_delete_selected_pad_items">Delete selected items</string>
    <string name="pad_items_selection_title">%d item(s) selected</string>
    <string name="action_select_all">Select all</string>
    <string name="action_sync_pad">Sycnhronize the current list</string>
    <string name="action_retry_sync_pad">Retry synchronization</string>
    <string name="action_share_pad">Share this list</string>
    <string name="qr_code">QR code</string>
    <string name="error_failed_to_add_remote_pad">Failed to add remote shopping list.</string>
    <string name="continue_">Continue</string>
    <string name="snackbar_action_details">Details</string>
    <string name="dialog_close">Close</string>
    <string name="sync_error">Synchronisation failed</string>
    <string name="error_app_needs_update">The application might need to be updated.</string>
    <string name="error_server">Server error, please try again later.</string>
    <string name="error_internal">The application encountered an unexpected error.</string>
    <string name="error_network">Network error, please check your connectivity.</string>
    <string name="action_stop_sharing_pad">Remove sharing</string>
    <string name="stop_sharing_pad_dialog_body">Do you want to stop synchronizing \"%s\"?</string>
    <string name="keep_on_server_checkbox_label">Keep on server</string>
    <string name="error_invalid_sharing_uri">This is not a valid sharing link.</string>
    <string name="navigate_back">Back</string>
    <string name="about_screen_title">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="source_code">Source Code</string>
    <string name="privacy_policy_url" translatable="false">https://shopping-list.jloc.fr/about/privacy-policy.html</string>
    <string name="terms_of_use_url" translatable="false">https://shopping-list.jloc.fr/about/terms-of-use.html</string>
    <string name="source_code_url" translatable="false">https://github.com/azert9/shopping-list</string>
    <string name="action_about">About</string>
    <string name="welcome_message_1">This application respects your privacy. Your shopping lists stay offline by default, but you can choose to share them using the synchronization feature. Synchronized lists are encrypted end-to-end.</string>
    <string name="welcome_message_2">By using this application, you are agreeing to the %s and the %s.</string>
    <string name="dialog_submit_accept">Accept</string>
    <string name="dialog_submit_refuse">Refuse</string>
    <string name="edit_item_dialog_title">Edit item</string>
    <string name="share_pad_screen_title">Sharing Pad</string>
    <string name="info_icon">info</string>
    <string name="share_pad_instructions_1">"Scan using a regular qr-code or camera app, or "</string>
    <string name="share_pad_instructions_2">copy link</string>
    <string name="sharing_link_label">"Shopping List Sharing "</string>
    <string name="copied_link">Copied link</string>
    <string name="license">MIT license</string>
</resources>
