...
                    .padding(24.dp),
            ) {
                if (title.isNotEmpty()) {
                    Text(
                        modifier = Modifier
                            .padding(bottom = 16.dp)
                            .testTag("dialog_title"),
                        text = title,
                        style = MaterialTheme.typography.headlineSmall,
                        color = MaterialTheme.colorScheme.onSurface,
                    )
                }
                content()
...
