...
        }
    }

    // main layout

    ModalNavigationDrawer(
        modifier = Modifier.testTag("drawer"),
        drawerState = drawerState,
        gesturesEnabled = backStack.lastOrNull()?.drawerEnabled ?: false,
        drawerContent = {
            DrawerContent(
                pads = pads,
                selectedPadId = backStack.lastOrNull().let {
...
